# unsafe_cell_slice

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  slice_index.rs
tests/: common.rs  v0_1.rs  v0_2.rs
