[package]
name = "unsafe_cell_slice"
version = "0.1.1"
edition = "2021"
rust-version = "1.60"
description = "A microlibrary for creating multiple mutable references to a slice"
documentation = "https://docs.rs/unsafe_cell_slice"
repository = "https://github.com/LDeakin/unsafe_cell_slice"
license = "MIT OR Apache-2.0"
keywords = ["slice", "unsafe", "unsafecell"]
categories = ["rust-patterns"]
exclude = [".github"]
